<resources>
    <string name="app_name">VerifityTest1</string>
    <string name="action_settings">Settings</string>
    <string name="simple_activity_sample">scan</string>
    <string name="person_id">תעודת זהות</string>
    <string name="person_password">סיסמא</string>
    <string name="title_activity_logedin">LogedinActivity</string>
    <string name="scancode">סרוק קוד כדי להמשיך</string>
    <string name="unregisteredcode">קוד זה קיים במערכת אך אינו משויך</string>
    <string name="unvaildcode">קוד אינו תקין</string>
    <string name="pls_wait">אנא המתן</string>
    <string name="fname">שם פרטי</string>
    <string name="lname">שם משפחה</string>
    <string name="load_pic">טוען תמונה</string>
    <string name="freeyear">חופשי שנתי</string>
    <string name="nomore">אין כניסות</string>
    <string name="points">כניסות</string>
    <string name="decrease_enter">הורד כניסה</string>
    <string name="addnewuser">הוסף חדש</string>
    <string name="choosehall">בחר אולם</string>
</resources>
